# huispedia

./: README.md  pyproject.toml
huispedia/: __init__.py  _core.py
tests/: test_core.py
